--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../imagens/fundo-site.jpg);
+    background-image: url(../imagens/fundo-site.gif);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -17,7 +17,7 @@ body{
 .cartao{
     background-color: #070d12;
     width: 370px;
-    border: 2px solid #e126d9;
+    border: 2px solid rgb(18, 137, 163);
     border-radius: 10px;
     overflow: hidden;
 }
@@ -32,7 +32,7 @@ body{
 
 .cartao .minhas-informacoes img{
     border-radius: 50px;
-    border: 4px solid #02d08f;
+    border: 4px solid rgb(18, 137, 163);
 }
 
 .cartao .minhas-informacoes .nome{
@@ -101,7 +101,7 @@ body{
 }
 
 .informacoes-abas .descricao span{
-    color: #02d08f;
+    color: #ffb300;
 }
 
 .redes-sociais{
@@ -128,14 +128,46 @@ body{
 }
 
 .redes-sociais .curriculo{
-    background-color: #06c185;
+    background-color: #2EA043;
 }
 
 .redes-sociais .linkedin{
-    background-color: #1d87bd;
+    background-color: #0A66C2;
 }
 
 .redes-sociais .github{
-    background-color: #545454;
+    background-color: #0D1117;
+    
+}
+
+.projetos{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    align-items: center;
+    max-height: 180px;
+    overflow-y: auto;
+}
+
+.projetos li a{
+    width: 250px;
+    display: block;
+    color: #f3f3f3;
+    text-align: center;
+    padding: 10px;
+    font-size: 20px;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.projetos li a:hover{
+    opacity: 0.8;
+}
+
+.projetos .projeto1{
+    background-color: #BF572E;
+}
+
+.projetos .projeto2{
+    background-color: #1890B1;
 }
 
