--- a/src/css/rolagem.css
+++ b/src/css/rolagem.css
@@ -1,7 +1,7 @@
 /* Works on Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: #e228d8 #070d12;
+    scrollbar-color: rgb(18, 137, 163) #070d12;
   }
   
   /* Works on Chrome, Edge, and Safari */
@@ -14,7 +14,7 @@
   }
   
   *::-webkit-scrollbar-thumb {
-    background-color: #e228d8;
+    background-color:  rgb(18, 137, 163);
     border-radius: 20px;
     border: 3px solid #070d12;
   }
